// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error <Status /> renders a stable snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 8,
    }
  }
  testID="status"
>
  <View
    style={
      {
        "backgroundColor": "#f5463b",
        "borderRadius": 100,
        "height": 4,
        "width": 20,
      }
    }
  />
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "fontFamily": "odido_Paragraph_Regular",
        },
        {
          "color": "#000000",
          "fontSize": 16,
          "letterSpacing": 0.23999999463558197,
          "lineHeight": 24,
          "textAlign": "left",
        },
        undefined,
      ]
    }
    testID="paragraph"
  >
    Error
  </Text>
</View>
`;

exports[`success <Status /> renders a stable snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 8,
    }
  }
  testID="status"
>
  <View
    style={
      {
        "backgroundColor": "#2f9a92",
        "borderRadius": 100,
        "height": 12,
        "width": 20,
      }
    }
  />
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "fontFamily": "odido_Paragraph_Regular",
        },
        {
          "color": "#000000",
          "fontSize": 16,
          "letterSpacing": 0.23999999463558197,
          "lineHeight": 24,
          "textAlign": "left",
        },
        undefined,
      ]
    }
    testID="paragraph"
  >
    Success
  </Text>
</View>
`;

exports[`warning <Status /> renders a stable snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 8,
    }
  }
  testID="status"
>
  <View
    style={
      {
        "backgroundColor": "#ff7621",
        "borderRadius": 100,
        "height": 8,
        "width": 20,
      }
    }
  />
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "fontFamily": "odido_Paragraph_Regular",
        },
        {
          "color": "#000000",
          "fontSize": 16,
          "letterSpacing": 0.23999999463558197,
          "lineHeight": 24,
          "textAlign": "left",
        },
        undefined,
      ]
    }
    testID="paragraph"
  >
    Warning
  </Text>
</View>
`;
